# hts

./: README.md
project1/: CMakeLists.txt  main.cpp  resource.qrc  root.cpp  root.h  root.ui  tab.cpp  tab.h  users.db  widget.cpp  widget.h  widget.ui
project1/source/chart/: buydialog.cpp  buydialog.h  buydialog.ui  chart.cpp  chart.h  chart.ui  chart_model.h  detaildialog.cpp  detaildialog.h  detaildialog.ui
project1/source/dashboard/: bankingdb.cpp  bankingdb.h  dashboard.cpp  dashboard.h  dashboard.ui  depositdialog.cpp  depositdialog.h  depositdialog.ui  senddialog.cpp  senddialog.h  senddialog.ui
project1/source/home/: home.cpp  home.h  home.ui
project1/source/login/: login.cpp  login.h  login.ui
project1/source/signup/: signup.cpp  signup.h  signup.ui
project1/source/util/AppManager/: apimanager.cpp  apimanager.h  appmanager.cpp  appmanager.h  databasemanager.cpp  databasemanager.h
